<resources>
    <string name="app_name">MOBDEVE MCO</string>

    <!-- Bottom nav-->
    <string name="navitem1">Home</string>
    <string name="navitem2">Map</string>
    <string name="navitem3">Add Sighting</string>
    <string name="navitem4">Catalogue</string>
    <string name="navitem5">Profile</string>


    <!-- Item Post -->
    <string name="Username">…</string> <!-- to be dynamic -->
    <string name="PostTime">Posted recently</string> <!-- to be dynamic -->
    <string name="PostScore">4 pts</string> <!-- to be dynamic %d-->

    <string name="SightingName">Thresher shark</string> <!-- to be dynamic -->
    <string name="SightingNameScientific">Alopias vulpinus</string> <!-- to be dynamic -->
    <string name="SightingPlace">Moalboal, Cebu</string> <!-- to be dynamic -->
    <string name="SightingDate"> Seen on Sep 18, 2024</string> <!-- to be dynamic -->

    <string name="ViewMoreDetails">Sea More Details</string>

    <string name="NoPhoto">No photo of sighting</string>


    <!-- Comment -->
    <string name="CommentUsername">deeplovesoctopus</string>
    <string name="CommentContent">Wow, amazing! I love marine animals. Literally.</string>
    <string name="CommentTime">2d</string>

    <!-- Catalogue -->
    <string name="Category1">Fish</string>

    <!-- Sighting -->
    <string name="AddingSighting">Uploading your sighting…</string>
    <string name="EditingSighting">Editing your sighting…</string>

    <!-- Profile / Settings -->
    <string name="SettingsUsernameLabel">Username</string>
    <string name="SettingsBioLabel">Bio</string>
    <string name="SettingsContactLink">Links</string>

    <string name="UserBio">…</string>
    <string name="UserContactLink">thefishwhisperer@gmail.com</string>

    <string name="MySightingsHeader">My Sightings</string>

    <!-- launch -->
    <string name="LaunchHeader">Help protect our oceans, \none shellfie at a time.</string>
    <string name="LaunchSubheader">Join a community of ocean lovers. Spot marine life, snap a photo, and share it for conservation efforts. </string>
    <string name="logout">Logout</string>

</resources>