<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_regular_home"
        android:title="@string/navitem1" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_regular_map"
        android:title="@string/navitem2" />

    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add_sighting"
        android:title="@string/navitem3" />

    <item
        android:id="@+id/nav_catalogue"
        android:icon="@drawable/ic_regular_catalogue"
        android:title="@string/navitem4" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_regular_user"
        android:title="@string/navitem5" />

</menu>