<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/thresher_shark" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtSightingName"
            style="@style/Header3Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SightingName" />

        <TextView
            android:id="@+id/txtSightingNameScientific"
            style="@style/BodyItalic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SightingNameScientific" />

        <TextView
            android:id="@+id/txtSightingPlace"
            style="@style/Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SightingPlace" />

        <TextView
            android:id="@+id/textSightingDate"
            style="@style/Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SightingDate" />

        <TextView
            android:id="@+id/txtSeaMoreDetails"
            style="@style/Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ViewMoreDetails" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/icEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_regular_pen_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>