<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgCommentUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profpic" />

    <TextView
        android:id="@+id/txtCommentUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/CommentUsername"
        app:layout_constraintStart_toEndOf="@+id/imgCommentUsername"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/CaptionBold"/>

    <TextView
        android:id="@+id/txtCommentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/CommentTime"
        app:layout_constraintStart_toEndOf="@+id/txtCommentUsername"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Caption"/>

    <TextView
        android:id="@+id/txtCommentContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/CommentContent"
        app:layout_constraintStart_toEndOf="@+id/imgCommentUsername"
        app:layout_constraintTop_toBottomOf="@+id/txtCommentUsername"
        style="@style/Body"/>
</androidx.constraintlayout.widget.ConstraintLayout>