<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="32dp">

    <TextView
        android:id="@+id/txtUsername"
        style="@style/BodyBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="21dp"
        android:text="@string/Username"
        app:layout_constraintBottom_toBottomOf="@+id/txtPostTime"
        app:layout_constraintStart_toEndOf="@+id/contProfPic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPostTime"
        style="@style/Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/PostTime"
        app:layout_constraintBottom_toTopOf="@+id/no_photo_text"
        app:layout_constraintStart_toEndOf="@+id/contProfPic"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/contProfPic"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgProfPic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/btnUpvote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:paddingStart="3dp"
        android:paddingTop="3dp"
        android:paddingEnd="1dp"
        android:paddingBottom="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_photo_text"
        app:srcCompat="@drawable/ic_regular_check" />

    <ImageButton
        android:id="@+id/btnDownvote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:paddingStart="1dp"
        android:paddingTop="3dp"
        android:paddingEnd="3dp"
        android:paddingBottom="3dp"
        app:layout_constraintStart_toEndOf="@+id/btnUpvote"
        app:layout_constraintTop_toBottomOf="@+id/no_photo_text"
        app:srcCompat="@drawable/ic_regular_report" />

    <ImageButton
        android:id="@+id/btnComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:padding="3dp"
        app:layout_constraintEnd_toStartOf="@+id/btnModify"
        app:layout_constraintTop_toBottomOf="@+id/no_photo_text"
        app:srcCompat="@drawable/ic_regular_comment" />

    <ImageButton
        android:id="@+id/btnModify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_photo_text"
        app:srcCompat="@drawable/ic_regular_more" />

    <TextView
        android:id="@+id/txtSightingName"
        style="@style/Header3Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/SightingName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDownvote" />

    <TextView
        android:id="@+id/txtSightingNameScientific"
        style="@style/BodyItalic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/SightingNameScientific"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSightingName" />

    <TextView
        android:id="@+id/txtSeaMoreDetails"
        style="@style/Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/ViewMoreDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSightingNameScientific" />

    <TextView
        android:id="@+id/txtSightingPlace"
        style="@style/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/SightingPlace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModify" />

    <TextView
        android:id="@+id/txtSightingDate"
        style="@style/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/SightingDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSightingPlace" />

    <TextView
        android:id="@+id/txtPostScore"
        style="@style/BodyBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/PostScore"
        app:layout_constraintBottom_toBottomOf="@+id/btnDownvote"
        app:layout_constraintStart_toEndOf="@+id/btnDownvote"
        app:layout_constraintTop_toBottomOf="@+id/no_photo_text" />

    <TextView
        android:id="@+id/no_photo_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorOnSurface"
        android:gravity="center"
        android:text="No photo of sighting"
        android:textColor="?attr/colorSurface"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contProfPic" />

</androidx.constraintlayout.widget.ConstraintLayout>